--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.ai.navigation": "2.0.4",
     "com.unity.collab-proxy": "2.3.1",
     "com.unity.feature.development": "1.0.2",
+    "com.unity.formats.fbx": "5.1.2",
     "com.unity.ide.rider": "3.0.34",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
